Initial Trial for Indicator Layer

--- a/notebooks/Indicators.ipynb
+++ b/notebooks/Indicators.ipynb
@@ -26,10 +26,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 2,
    "id": "0c2d9dcf-b7fd-4c8a-b007-6d6692189b2e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -69,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "78d78821-139c-4c9f-bc8e-c00d656359a7",
    "metadata": {},
    "outputs": [],
@@ -98,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "e07c63cf-0815-47cc-ba92-0f350971617d",
    "metadata": {},
    "outputs": [
@@ -108,7 +117,7 @@
        "True"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "221e10b7-28d0-47cb-b13c-b7442a809c08",
    "metadata": {},
    "outputs": [],
@@ -152,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "619262ea-724b-44de-8bd3-d8d36b2e8460",
    "metadata": {},
    "outputs": [],
@@ -715,16 +724,206 @@
    "id": "d07b536f-83b0-49c6-9422-5bf0f0b3112f",
    "metadata": {},
    "source": [
-    "## Conduct test with the synthesized database"
+    "# \"Layer\" before implementing indicator functions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "01653460-2b4b-4b8b-b094-248e3559cbc2",
+   "metadata": {},
+   "source": [
+    "We've observed that the indicator database is necessary only when a user query requires statistical information. Otherwise, our indicator functions pull the wrong data, wasting time. We could add a layer to determine if statistical information is needed for a user query, allowing us to decide whether to implement indicator functions."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "95ec7059-ecd0-4078-b176-db734022d2d9",
+   "metadata": {},
+   "source": [
+    "## Test Examples"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
+   "id": "23114f10-2c72-4448-ad00-da2bd84c76da",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "indicator_query = \"How much private investment did Ethiopia attract in its energy sector in 2021?\" # Expected: True\n",
+    "clarification_query = \"Could you clarify the role of UNDP in promoting sustainable energy solutions in urban areas?\" # Expected: False\n",
+    "comparative_query = \"How does UNDP's approach to sustainable energy differ from other international development organizations?\" # Expected: False\n",
+    "descriptive_query = \"Can you describe the impact of UNDP's sustainable energy projects on local communities?\" # Expected: False\n",
+    "informational_query = \"What are the indicators used by UNDP to measure the effectiveness of sustainable energy interventions?\" # Expected: False\n",
+    "opinion_query = \"Has UNDP's focus on sustainable energy contributed to poverty alleviation in rural areas?\" # Expected: False\n",
+    "procedural_query = \"How do you assess the feasibility of a sustainable energy project, following UNDP's guidelines?\" # Expected: False\n",
+    "queries = \"What percentage of Niger's population has access to electricity for productive use?\" # Expected: True\n",
+    "indicator_query2 = \"What percentage of China's total energy consumption in 2014 came from fossil fuels such as coal, oil, natural gas, and similar sources?\" # Expected: True\n",
+    "\n",
+    "\n",
+    "test_queries = [indicator_query, clarification_query, comparative_query, descriptive_query, informational_query, opinion_query, procedural_query, queries, indicator_query2]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d936c373-86bd-41e2-874e-c58293649a90",
+   "metadata": {},
+   "source": [
+    "## First Trial - Few Shot (Didn't work well) ❌"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "90669bad-85a1-4cdb-bec8-1a6b1349e93c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# use this function to make simple openAI Calls\n",
+    "def callOpenAIFewShot(prompts):  \n",
+    "    response_entities = openai.chat.completions.create(\n",
+    "                    model=openai_deployment,\n",
+    "                    temperature=0,\n",
+    "                    messages=prompts\n",
+    "                )\n",
+    "    response = response_entities.choices[0].message.content\n",
+    "    return response"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "1b8b8d49-f20d-4188-8467-b40f648e80d0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def indicator_layer_few_shot(user_query):\n",
+    "    # few-shot prompt\n",
+    "    llm_instructions = [\n",
+    "        {\n",
+    "            \"role\": \"system\",\n",
+    "            \"content\":\"As an AI assistant, your task is to determine if a user query requires statistical information. These are questions that depend on quantitative data (such as mean, percentage, etc.) for an accurate response.\"\n",
+    "        },\n",
+    "        {\n",
+    "            \"role\": \"user\",\n",
+    "            \"content\": \"What has been the average percentage of the population with access to energy, electricity, and clean cooking solutions in Haiti over the past five years?\"\n",
+    "        },\n",
+    "        {\n",
+    "            \"role\": \"assistant\",\n",
+    "            \"content\": \"True\"\n",
+    "        },\n",
+    "        {\n",
+    "            \"role\": \"user\",\n",
+    "            \"content\": \"Could you clarify the role of UNDP in promoting sustainable energy solutions in urban areas?\"\n",
+    "        },\n",
+    "        {\n",
+    "            \"role\": \"assistant\",\n",
+    "            \"content\": \"False\"\n",
+    "        },\n",
+    "        {\n",
+    "            \"role\": \"user\",\n",
+    "            \"content\": f\"{user_query}\"\n",
+    "        }\n",
+    "    ]\n",
+    "    ##synthesis module\n",
+    "    answer = callOpenAIFewShot(llm_instructions)\n",
+    "\n",
+    "    ##structure response\n",
+    "    response={\n",
+    "        \"user_query\":user_query,\n",
+    "        \"answer\":answer   \n",
+    "    }\n",
+    "    \n",
+    "    return response"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "4bb70331-9618-417a-9d57-16e427dac836",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'user_query': 'How much private investment did Ethiopia attract in its energy sector in 2021?', 'answer': 'True'}\n",
+      "{'user_query': 'Could you clarify the role of UNDP in promoting sustainable energy solutions in urban areas?', 'answer': 'True'}\n",
+      "{'user_query': \"How does UNDP's approach to sustainable energy differ from other international development organizations?\", 'answer': 'True'}\n",
+      "{'user_query': \"Can you describe the impact of UNDP's sustainable energy projects on local communities?\", 'answer': 'True'}\n",
+      "{'user_query': 'What are the indicators used by UNDP to measure the effectiveness of sustainable energy interventions?', 'answer': 'True'}\n",
+      "{'user_query': \"Has UNDP's focus on sustainable energy contributed to poverty alleviation in rural areas?\", 'answer': 'True'}\n",
+      "{'user_query': \"How do you assess the feasibility of a sustainable energy project, following UNDP's guidelines?\", 'answer': 'True'}\n",
+      "{'user_query': \"What percentage of Niger's population has access to electricity for productive use?\", 'answer': 'True'}\n",
+      "{'user_query': \"What percentage of China's total energy consumption in 2014 came from fossil fuels such as coal, oil, natural gas, and similar sources?\", 'answer': 'True'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "for query in test_queries:\n",
+    "    print(indicator_layer_few_shot(query))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2d65c168-2f01-461c-a7ef-dc81bfd56b30",
+   "metadata": {},
+   "source": [
+    "## Second Trial - Most of time works well but need to do experiments more ✅"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
    "id": "3b33615f-13db-44a6-9017-8f874d5b2b42",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def indicator_layer(user_query):\n",
+    "    llm_instructions = f\"\"\"\n",
+    "    Determine if a user query requires statistical information. These are questions that depend on quantitative data for an accurate response. Answer with \"True\" or False\"\n",
+    "\n",
+    "    User Query: {user_query}\n",
+    "    \"\"\"\n",
+    "    ##synthesis module\n",
+    "    #answer = callOpenAIFewShot(llm_instructions)\n",
+    "    answer = callOpenAI(llm_instructions)\n",
+    "\n",
+    "    ##structure response\n",
+    "    response={\n",
+    "        \"user_query\":user_query,\n",
+    "        \"answer\":answer   \n",
+    "    }\n",
+    "    \n",
+    "    return response"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "c29a8810-e3e3-4116-86a6-8b280b61301b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'user_query': 'How much private investment did Ethiopia attract in its energy sector in 2021?', 'answer': 'True'}\n",
+      "{'user_query': 'Could you clarify the role of UNDP in promoting sustainable energy solutions in urban areas?', 'answer': 'False'}\n",
+      "{'user_query': \"How does UNDP's approach to sustainable energy differ from other international development organizations?\", 'answer': 'False'}\n",
+      "{'user_query': \"Can you describe the impact of UNDP's sustainable energy projects on local communities?\", 'answer': 'False'}\n",
+      "{'user_query': 'What are the indicators used by UNDP to measure the effectiveness of sustainable energy interventions?', 'answer': 'False'}\n",
+      "{'user_query': \"Has UNDP's focus on sustainable energy contributed to poverty alleviation in rural areas?\", 'answer': 'False'}\n",
+      "{'user_query': \"How do you assess the feasibility of a sustainable energy project, following UNDP's guidelines?\", 'answer': 'False'}\n",
+      "{'user_query': \"What percentage of Niger's population has access to electricity for productive use?\", 'answer': 'True'}\n",
+      "{'user_query': \"What percentage of China's total energy consumption in 2014 came from fossil fuels such as coal, oil, natural gas, and similar sources?\", 'answer': 'True'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "for query in test_queries:\n",
+    "    print(indicator_layer(query))"
+   ]
   }
  ],
  "metadata": {
