--- a/notebooks/Indicators.ipynb
+++ b/notebooks/Indicators.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "0c2d9dcf-b7fd-4c8a-b007-6d6692189b2e",
    "metadata": {},
    "outputs": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "78d78821-139c-4c9f-bc8e-c00d656359a7",
    "metadata": {},
    "outputs": [],
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "e07c63cf-0815-47cc-ba92-0f350971617d",
    "metadata": {},
    "outputs": [
@@ -117,7 +117,7 @@
        "True"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "221e10b7-28d0-47cb-b13c-b7442a809c08",
    "metadata": {},
    "outputs": [],
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "619262ea-724b-44de-8bd3-d8d36b2e8460",
    "metadata": {},
    "outputs": [],
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 13,
    "id": "a40d575b-c8ba-4ff5-baba-3002debe466c",
    "metadata": {},
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 14,
    "id": "f8d2d6f1-fc02-4f0f-a31f-75d2d4c79ab2",
    "metadata": {},
    "outputs": [],
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 15,
    "id": "59551b17-a78f-4aaf-9f0b-c7d13463e6e3",
    "metadata": {
     "scrolled": true
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 16,
    "id": "4d45b480-44fa-4fd7-b02a-83eda2cedab1",
    "metadata": {},
    "outputs": [],
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 17,
    "id": "e64e007e-c4cf-4876-a39a-361d31556c06",
    "metadata": {},
    "outputs": [],
@@ -581,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 18,
    "id": "00a85b63-0697-4351-a866-6f358a2c8d7e",
    "metadata": {},
    "outputs": [],
@@ -631,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 19,
    "id": "3b751eb6-347c-4b55-94ee-d3ffc27d0be2",
    "metadata": {},
    "outputs": [],
@@ -745,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 20,
    "id": "23114f10-2c72-4448-ad00-da2bd84c76da",
    "metadata": {},
    "outputs": [],
@@ -774,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "id": "90669bad-85a1-4cdb-bec8-1a6b1349e93c",
    "metadata": {},
    "outputs": [],
@@ -792,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 22,
    "id": "1b8b8d49-f20d-4188-8467-b40f648e80d0",
    "metadata": {},
    "outputs": [],
@@ -839,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 23,
    "id": "4bb70331-9618-417a-9d57-16e427dac836",
    "metadata": {},
    "outputs": [
@@ -874,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 24,
    "id": "3b33615f-13db-44a6-9017-8f874d5b2b42",
    "metadata": {},
    "outputs": [],
@@ -900,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 25,
    "id": "c29a8810-e3e3-4116-86a6-8b280b61301b",
    "metadata": {},
    "outputs": [
@@ -924,6 +924,97 @@
     "for query in test_queries:\n",
     "    print(indicator_layer(query))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9285af89-2565-4bb9-8bb8-aa8d2d6423e1",
+   "metadata": {},
+   "source": [
+    "# Indicator Trello Test Format"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "55f259ad-f23d-4ad3-a5b3-e6d1562fd0d8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wdi_csv = pd. read_csv('../data/WDI_CSV/WDICSV.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "21c903a6-117b-4614-b116-d01c095a3766",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def indicator_trello_test(user_query) :\n",
+    "    is_indicator_question = indicator_layer(user_query)\n",
+    "    country_codes = find_mentioned_country_code (user_query)\n",
+    "    indicator_codes = filter_indicators (user_query)\n",
+    "    years = find_target_period (user_query)\n",
+    "    countries, indicators = set(), []\n",
+    "    \n",
+    "    for country_code in country_codes:\n",
+    "        for indicator_code in indicator_codes:\n",
+    "            target_row = wdi_csv[(wdi_csv['Country Code'] == country_code) & (wdi_csv['Indicator Code'] == indicator_code)]\n",
+    "            if not target_row. empty:\n",
+    "                country, indicator = target_row['Country Name'].values[0], target_row['Indicator Name'].values [0]\n",
+    "                countries.add(country)\n",
+    "                indicators.append (indicator)\n",
+    "                \n",
+    "    query_analysis_info = {\n",
+    "        'is_indicator_question': is_indicator_question['answer'],\n",
+    "        'Countries': list(countries),\n",
+    "        'Indicators': indicators,\n",
+    "        'years': years\n",
+    "    }\n",
+    "    \n",
+    "    return query_analysis_info"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "04756177-55a5-443b-b3e5-f78e6f549858",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'is_indicator_question': 'True',\n",
+       " 'Countries': ['China'],\n",
+       " 'Indicators': ['Electricity production from oil, gas and coal sources (% of total)',\n",
+       "  'Renewable energy consumption (% of total final energy consumption)',\n",
+       "  'Alternative and nuclear energy (% of total energy use)',\n",
+       "  'Fossil fuel energy consumption (% of total)',\n",
+       "  'Merchandise imports from low- and middle-income economies in East Asia & Pacific (% of total merchandise imports)',\n",
+       "  'Merchandise imports from low- and middle-income economies in Europe & Central Asia (% of total merchandise imports)',\n",
+       "  'Merchandise imports from low- and middle-income economies in Latin America & the Caribbean (% of total merchandise imports)',\n",
+       "  'Merchandise imports from low- and middle-income economies in Middle East & North Africa (% of total merchandise imports)',\n",
+       "  'Merchandise imports from low- and middle-income economies in South Asia (% of total merchandise imports)',\n",
+       "  'Merchandise imports from low- and middle-income economies in Sub-Saharan Africa (% of total merchandise imports)'],\n",
+       " 'years': ['2014']}"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "indicator_trello_test(indicator_query2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5364b25c-e7b0-4d36-93a0-bdad6449824e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
