Update Indicator Trello Format

--- a/notebooks/Indicators.ipynb
+++ b/notebooks/Indicators.ipynb
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "78d78821-139c-4c9f-bc8e-c00d656359a7",
    "metadata": {},
    "outputs": [],
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "e07c63cf-0815-47cc-ba92-0f350971617d",
    "metadata": {},
    "outputs": [
@@ -117,7 +117,7 @@
        "True"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "221e10b7-28d0-47cb-b13c-b7442a809c08",
    "metadata": {},
    "outputs": [],
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "619262ea-724b-44de-8bd3-d8d36b2e8460",
    "metadata": {},
    "outputs": [],
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "fd36673f-d6ef-47b7-82af-f89762719967",
    "metadata": {},
    "outputs": [],
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "5094b8b1-234b-46e0-ae38-130d6f4a57e8",
    "metadata": {},
    "outputs": [],
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "f53dfdb7-12dd-43cc-a860-d880ce8fdf8d",
    "metadata": {},
    "outputs": [],
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "9e3b703a-57b3-493a-862c-8160d152acd7",
    "metadata": {},
    "outputs": [],
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "3eab9be9-a94b-40cd-8c23-70efbb217489",
    "metadata": {},
    "outputs": [],
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "96a5e173-6a61-4a48-bb68-180e698e1afd",
    "metadata": {},
    "outputs": [],
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "2f51e73a-597b-41c1-a2e0-76d3fece207b",
    "metadata": {},
    "outputs": [],
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "a40d575b-c8ba-4ff5-baba-3002debe466c",
    "metadata": {},
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "f8d2d6f1-fc02-4f0f-a31f-75d2d4c79ab2",
    "metadata": {},
    "outputs": [],
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "59551b17-a78f-4aaf-9f0b-c7d13463e6e3",
    "metadata": {
     "scrolled": true
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "4d45b480-44fa-4fd7-b02a-83eda2cedab1",
    "metadata": {},
    "outputs": [],
@@ -745,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "id": "23114f10-2c72-4448-ad00-da2bd84c76da",
    "metadata": {},
    "outputs": [],
@@ -774,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "id": "90669bad-85a1-4cdb-bec8-1a6b1349e93c",
    "metadata": {},
    "outputs": [],
@@ -792,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "id": "1b8b8d49-f20d-4188-8467-b40f648e80d0",
    "metadata": {},
    "outputs": [],
@@ -839,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "id": "4bb70331-9618-417a-9d57-16e427dac836",
    "metadata": {},
    "outputs": [
@@ -874,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "id": "3b33615f-13db-44a6-9017-8f874d5b2b42",
    "metadata": {},
    "outputs": [],
@@ -900,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "id": "c29a8810-e3e3-4116-86a6-8b280b61301b",
    "metadata": {},
    "outputs": [
@@ -935,7 +935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "id": "55f259ad-f23d-4ad3-a5b3-e6d1562fd0d8",
    "metadata": {},
    "outputs": [],
@@ -945,18 +945,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 26,
    "id": "21c903a6-117b-4614-b116-d01c095a3766",
    "metadata": {},
    "outputs": [],
    "source": [
     "def indicator_trello_test(user_query) :\n",
     "    is_indicator_question = indicator_layer(user_query)['answer']\n",
+    "    countries, indicators, years = set(), [], []\n",
     "    if is_indicator_question:\n",
     "        country_codes = find_mentioned_country_code (user_query)\n",
-    "        indicator_codes = filter_indicators (user_query)\n",
-    "        years = find_target_period (user_query)\n",
-    "        countries, indicators = set(), []\n",
+    "        indicator_codes = filter_indicators(user_query)\n",
+    "        years = find_target_period(user_query)\n",
     "        \n",
     "        for country_code in country_codes:\n",
     "            for indicator_code in indicator_codes:\n",
@@ -964,28 +964,21 @@
     "                if not target_row. empty:\n",
     "                    country, indicator = target_row['Country Name'].values[0], target_row['Indicator Name'].values [0]\n",
     "                    countries.add(country)\n",
-    "                    indicators.append (indicator)\n",
+    "                    indicators.append(indicator)\n",
     "                    \n",
-    "        query_analysis_info = {\n",
-    "            'is_indicator_question': is_indicator_question,\n",
-    "            'Countries': list(countries),\n",
-    "            'Indicators': indicators,\n",
-    "            'years': years\n",
-    "        }\n",
-    "    else:\n",
-    "        query_analysis_info = {\n",
-    "            'is_indicator_question': is_indicator_question,\n",
-    "            'Countries': [],\n",
-    "            'Indicators': [],\n",
-    "            'years': []\n",
-    "        }\n",
+    "    query_analysis_info = {\n",
+    "        'is_indicator_question': is_indicator_question,\n",
+    "        'Countries': list(countries),\n",
+    "        'Indicators': indicators,\n",
+    "        'years': years\n",
+    "    }\n",
     "    \n",
     "    return query_analysis_info"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 27,
    "id": "04756177-55a5-443b-b3e5-f78e6f549858",
    "metadata": {},
    "outputs": [
@@ -1007,7 +1000,7 @@
        " 'years': ['2014']}"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1018,7 +1011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 28,
    "id": "5364b25c-e7b0-4d36-93a0-bdad6449824e",
    "metadata": {},
    "outputs": [
@@ -1031,7 +1024,7 @@
        " 'years': []}"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
